--- a/manifest_mel5.json
+++ b/manifest_mel5.json
@@ -1,17 +1,17 @@
 {
   "settings": {
-    "run_name": "hla_3",
-    "output_path": "data/pdb_all",
+    "run_name": "mel_5",
+    "output_path": "data/pdb_mel_analysis_classes",
     "debug": true,
     "track_steps": false,
-    "centroid_threshold": 10.0,
+    "centroid_threshold": 10,
     "centroid_granularity": "ca_only",
     "exclude_waters": false,
-    "check_rsa": true,
+    "check_rsa": false,
     "check_depth": false,
     "rsa_filter": 0.1,
     "depth_filter": 10.0,
-    "distance_diff_threshold": 3.0,
+    "distance_diff_threshold": {"A": 2.0, "C": 3.0},
     
     "distance_bins": 5,
     "rsa_bins": 3,
@@ -19,7 +19,7 @@
 
     "serd_config": null,
 
-    "classes_": {
+    "classes": {
       "residues": {
         "HID": ["ALA", "VAL", "LEU", "ILE", "MET"],
         "POL": ["SER", "THR", "ASN", "GLN", "CYS"],
@@ -33,7 +33,7 @@
 
   "inputs": [
     {
-      "path": "/home/elementare/GithubProjects/pMHC_graph/Analysis/pdb_all",
+      "path": "/home/elementare/GithubProjects/pMHC_graph/Analysis/processed_pdbs",
       "enable_tui": false,
       "extensions": [".pdb", ".cif"],
       "constrains": [
@@ -45,7 +45,7 @@
     "MHC1": {
       "chains": ["C"],
       "residues": {
-        "A": [18, 19, 42, 43, 44, 54, 55, 56, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 80, 81, 83, 84, 85, 89, 108, 109, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171]
+        "A": [19,44,55,56,58,59,61,62,63,64,65,66,68,69,70,71,72,73,75,76,79,80,83,84,108,131,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,161,162,163,166,167,169,170]
       }
     },
     "MHC2": {
