--- a/manifest_mage_titin.json
+++ b/manifest_mage_titin.json
@@ -1,21 +1,21 @@
 {
   "settings": {
-    "run_name": "hlas",
-    "output_path": "data/hlas_new",
+    "run_name": "magextitin",
+    "output_path": "data/magextitin",
     "debug": true,
     "track_steps": false,
     "centroid_threshold": 10.0,
     "centroid_granularity": "ca_only",
-    "exclude_waters": false,
+    "exclude_waters": true,
     "check_rsa": false,
     "check_depth": false,
     "rsa_filter": 0.1,
     "depth_filter": 10.0,
-    "distance_diff_threshold": {"A": 2.0, "C": 3.0},
-    "max_chunks": 20,    
-    "distance_bins": 5,
+    "distance_diff_threshold": 3.0,
+
+    "distance_bins": 3,
     "rsa_bins": 3,
-    "depth_bins": 5,
+    "depth_bins": 3,
 
     "serd_config": null,
 
@@ -33,12 +33,9 @@
 
   "inputs": [
     {
-      "path": "/home/elementare/GithubProjects/pMHC_graph/Analysis/pdbs/",
-      "enable_tui": false,
-      "extensions": [".pdb", ".cif"],
-      "constrains": [
-        { "name": "MHC1" }
-      ]
+      "path": ["pdb_input/"],
+      "enable_tui": true,
+      "extensions": [".pdb", ".pdb.gz", ".cif"] 
     }
   ],
   "constrains": {
