--- a/manifests/manifest_logic.json
+++ b/manifests/manifest_logic.json
@@ -1,13 +1,13 @@
 {
   "settings": {
-    "run_name": "mel_5",
+    "run_name": "logic",
     "run_mode": "all",
     "max_chunks": 5, 
-    "output_path": "data/mel5_all",
+    "output_path": "data/logic",
     "debug": true,
     "track_steps": false,
     "rsa_table": "Wilke",
-    "edge_threshold": 8.5,
+    "edge_threshold": 10.0,
     "node_granularity": "ca_only",
     "include_ligands": true,
     "include_noncanonical_residues": true,
@@ -15,7 +15,6 @@
     "triad_rsa": false,
     "rsa_filter": 0.1,
     "close_tolerance_rsa": 0.01,
-    "_distance_std_threshold": {"A": 2.0, "C": 3.0},
     "distance_std_threshold": 3.0,
     "distance_diff_threshold": 2.0,
     "_filter_triads_by_chain": ["C"],    
@@ -38,11 +37,11 @@
 
   "inputs": [
     {
-      "path": "~/GithubProjects/pMHC_graph/processed_mel/",
+      "path": "~/GithubProjects/pMHC_graph/Analysis/test_logic/",
       "enable_tui": false,
       "extensions": [".pdb", ".cif"],
       "selectors": [
-        { "name": "MHC1" }
+        { "name": "general" }
       ]
     }
   ],
@@ -58,6 +57,15 @@
       "residues": {
         "A": [39, 53, 54, 55, 57, 58, 60, 61, 62, 64, 65, 67, 68, 69, 71]
       }
+    },
+    "general": {
+      "structures": {
+        "I": ["B", "E"]
+      },
+      "residues": {
+        "E": [61]
+      },
+      "logic": "exposed & (residues | structures)"
     }
   }
 }
