Adding ASA Filter to template

--- a/manifests/manifest_template.json
+++ b/manifests/manifest_template.json
@@ -7,13 +7,14 @@
     "debug": true,
     "track_steps": false,
     "rsa_table": "Wilke",
-    "edge_threshold": 8.5,
+    "edge_threshold": 10.0,
     "node_granularity": "ca_only",
     "include_ligands": true,
     "include_noncanonical_residues": true,
     "exclude_waters": true,
     "triad_rsa": false,
     "rsa_filter": 0.1,
+    "asa_filter": 100.0,
     "close_tolerance_rsa": 0.01,
     "_distance_std_threshold": {"A": 2.0, "C": 3.0},
     "distance_std_threshold": 3.0,
